cluster/omnigent/molecule-tests-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: molecule-tests
