cluster/omnigent/omnigent-sandboxes-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omnigent-sandboxes
  annotations:
    argocd.argoproj.io/sync-wave: '-4'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
